tests/fixtures/invalid/none_rshift_bytes.py
# Cannot right shift None and Bytes
x: None = None >> b"hello"
